--- a/users/templates/users/delete_account.html
+++ b/users/templates/users/delete_account.html
@@ -1,36 +1,23 @@
-{% extends 'users/profile.html' %}
+{% load static i18n permission_tags %}
 
-{% load static i18n %}
-{% load widget_tweaks %}
-{% load django_bootstrap_breadcrumbs %}
-
-{% block breadcrumbs %}
-    {{ block.super }}
-    {% trans 'Remove Account' as bread %}
-    {% breadcrumb bread 'users:remove_acc' %}
-{% endblock %}
-
-{% block content %}
-    <div class="row">
-        <div class="col-md-12">
-            <div class="well well-lg">
-                <form action="" method="post">
-                    {% csrf_token %}
-                    <h2>{% trans 'Are you sure you want delete your account?' %}</h2>
-                    <p>{% trans 'All data will be lost and havent how recover it.' %}</p>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="pull-left">
-                                <input type="submit" class="btn btn-raised btn-block btn-success" value="{% trans 'Remove' %}" />
-                            </div>
-                            <div class="pull-right">
-                                <a href="{% url 'users:profile' %}" class="btn btn-raised btn-block btn-default" >{% trans 'Cancel' %}</a>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
+<!-- Modal (remember to change the ids!!!) -->
+<div class="modal fade" id="remove_account" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+           <!-- Modal Body -->
+      <div class="modal-body">
+        <!-- Put ONLY your content here!!!  -->
+        <form id="delete_form" action="{% url 'users:remove_acc' %}" method="post">
+          {% csrf_token %}
+          <p>{% trans 'Are you sure you want delete your account?' %}</p>
+        </form>
+      </div>
+      <!-- Modal Footer -->
+      <div id="delete-category-footer" class="modal-footer">
+        <!-- Don't remove that!!!  -->
+        <button type="button" class="btn btn-default btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
+        <button type="submit" form="delete_form" class="btn btn-success btn-raised erase-button">{% trans "Delete" %}</button>
+      </div>
     </div>
-    <br clear="all" />
-{% endblock %}
+  </div>
+</div>
