--- a/users/templates/users/_form.html
+++ b/users/templates/users/_form.html
@@ -8,9 +8,9 @@
 			{% if field.auto_id == 'id_image' %}
         		{% if field.field.required %}
 					<label for="{{ field.auto_id }}">{{ field.label }} <span>*</span></label>
-				{% else %}
+					{% else %}
 					<label for="{{ field.auto_id }}">{{ field.label }}</label>
-				{% endif %}
+					{% endif %}
 				{% render_field field class='form-control' %}
 				<div class="input-group">
                   	<input type="text" readonly="" class="form-control" id="pic_holder" placeholder="{% trans 'Choose your photo...' %}">
@@ -22,10 +22,11 @@
                 </div>
             {% elif field.auto_id == 'id_description' %}
             	{% if field.field.required %}
-					<label for="{{ field.auto_id }}">{{ field.label }} <span>*</span></label>
-				{% else %}
-					<label for="{{ field.auto_id }}">{{ field.label }}</label>
-				{% endif %}
+									<label for="{{ field.auto_id }}">{{ field.label }} <span>*</span></label>
+							{% else %}
+
+								<label for="{{ field.auto_id }}">{{ field.label }}</label>
+							{% endif %}
             	{% render_field field class='form-control text_wysiwyg' %}
       		{% elif field.auto_id == 'id_is_staff' or  field.auto_id == 'id_is_active' %}
 				<div class="checkbox">
@@ -37,8 +38,15 @@
 				{% if field.field.required %}
 					<label for="{{ field.auto_id }}">{{ field.label }} <span>*</span></label>
 				{% else %}
-					<label for="{{ field.auto_id }}">{{ field.label }}</label>
+									{% if field.auto_id == 'id_x' or field.auto_id == 'id_y' or field.auto_id == 'id_width' or field.auto_id == 'id_height'%}
+
+									{% else %}
+											<label for="{{ field.auto_id }}">{{ field.label }}</label>
+									{% endif %}
+
+
 				{% endif %}
+
 				{% render_field field class='form-control' %}
 			{% endif %}
 				<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
