--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -646,7 +646,7 @@ a.add-row
     color: #26A69A
 
 .modal_profile_sidebar h4, .message-view .message-user
-    color: #59b75c
+    color: #26A69A
 
 .participant .user-info .status, .modal_profile_sidebar .status
     border-color: #888
