solved error in CSS as well as if the folder doesn't exists to save .xls files of reports

--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -170,7 +170,7 @@ a, a:focus, a:hover
 /* === Resources Common (ex: PDF, WebPage) App === */
 
 .topic-panel > .panel-heading 
-    background-color: #1d8fe0 !important
+    background-color: #0277BD !important
 
 
 .topic-panel .category-header .category-card-items i, .topic-panel-invisible .category-header .category-card-items i 
