added class for analytics report header

--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -170,7 +170,7 @@ a, a:focus, a:hover
 /* === Resources Common (ex: PDF, WebPage) App === */
 
 .topic-panel > .panel-heading 
-    background-color: #0277BD !important
+    background-color: #1d8fe0 !important
 
 
 .topic-panel .category-header .category-card-items i, .topic-panel-invisible .category-header .category-card-items i 
@@ -694,6 +694,9 @@ a.add-row
 
 .subject-participants .sub-user:hover
     background-color: #CCCCCC
+
+#analytics-panel
+    background-color: #0277BD !important
 
 @media(max-width: 768px) 
     .navbar .navbar-nav .dropdown .dropdown-menu li > a 
