--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -117,7 +117,7 @@ a, a:focus, a:hover {
 
 /* === Resources Common (ex: PDF, WebPage) App === */
 .topic-panel > .panel-heading {
-  background-color: #0277BD !important; }
+  background-color: #1d8fe0 !important; }
 
 .topic-panel .category-header .category-card-items i, .topic-panel-invisible .category-header .category-card-items i {
   color: #1772b3; }
@@ -522,6 +522,9 @@ a.add-row {
 
 .subject-participants .sub-user:hover {
   background-color: #CCCCCC; }
+
+#analytics-panel {
+  background-color: #0277BD !important; }
 
 @media(max-width: 768px) {
   .navbar .navbar-nav .dropdown .dropdown-menu li > a {
