--- a/reports/templates/reports/view.html
+++ b/reports/templates/reports/view.html
@@ -26,7 +26,7 @@
 
 
 	<div class="panel panel-info topic-panel">
-            <div class="panel-heading">
+            <div class="panel-heading" id="analytics-panel">
             	<div class="row">
                     <div class="col-md-12 category-header">
                         <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
