Changing participants list in subject view page

--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -689,6 +689,15 @@ a.add-row
 .chat-panel .chat-collapse
     background: #EEE
 
+#participants, .participants-list
+    background-color: $white
+
+#participants
+    box-shadow: 1px 1px 1px #26A69A
+
+#participants h4
+    color: #26A69A
+
 .subject-participants-label
     border-bottom-color: #DDD
 
