--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1549,26 +1549,66 @@ div.dataTables_wrapper div.dataTables_paginate {
     padding: 15px 0px;
 }
 
-.subject-participants-label {
-    padding-bottom: 5px;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
+.participants-list {
+    height: 200px;
+    max-height: 200px;
+    width: 315px;
+    float: right;
+    position: absolute;
+    top: 5px;
+    right: -315px;
+    overflow-y: auto
 }
 
-.subject-participants .sub-user {
+#participants {
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+
+    /* also accepts left, right, top, bottom coordinates; not required, but a good idea for styling */
+    -webkit-transform-origin: 90% 140%;
+    -moz-transform-origin: 90% 140%;
+    -ms-transform-origin: 90% 140%;
+    -o-transform-origin: 90% 140%;
+    transform-origin: 90% 140%;
+
+    /* Should be unset in IE9+ I think. */
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+
+    position: absolute;
+    top: -25px;
+    right: -25px;
     cursor: pointer;
+    padding: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    
 }
 
-.participants-container .popover {
-    max-width: 330px;
+#participants.open {
+    -webkit-transform-origin: 95% 140%;
+    -moz-transform-origin: 95% 140%;
+    -ms-transform-origin: 95% 140%;
+    -o-transform-origin: 95% 140%;
+    transform-origin: 95% 140%;
+    width: 200px;
 }
 
-.participants-container .popover-content {
-    padding: 9px 5px;
+#participants h4 {
+    font-size: 14px;
+    font-weight: 700;
+    margin-top: 2px;
+    margin-bottom: 2px; 
 }
 
-.participants-container .popover-content h4 {
-    font-size: 16px;
+.participants-list .subject-participants {
+    width: 300px;
+}
+
+.participants-container {
+    cursor: pointer;
 }
 
 @-moz-document url-prefix() {
