--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -517,6 +517,15 @@ a.add-row {
 .chat-panel .chat-collapse {
   background: #EEE; }
 
+#participants, .participants-list {
+  background-color: #FFFFFF; }
+
+#participants {
+  box-shadow: 1px 1px 1px #26A69A; }
+
+#participants h4 {
+  color: #26A69A; }
+
 .subject-participants-label {
   border-bottom-color: #DDD; }
 
