--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -693,9 +693,9 @@ a.add-row
     background-color: $white
 
 #participants
-    box-shadow: 1px 1px 1px #26A69A
+    box-shadow: 0px 1px 1px #26A69A
 
-#participants h4
+#participants i
     color: #26A69A
 
 .subject-participants-label
