--- a/amadeus/static/css/themes/green.css
+++ b/amadeus/static/css/themes/green.css
@@ -521,9 +521,9 @@ a.add-row {
   background-color: #FFFFFF; }
 
 #participants {
-  box-shadow: 1px 1px 1px #26A69A; }
+  box-shadow: 0px 1px 1px #26A69A; }
 
-#participants h4 {
+#participants i {
   color: #26A69A; }
 
 .subject-participants-label {
