--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -698,8 +698,8 @@ a.add-row
 #participants i
     color: #26A69A
 
-.subject-participants-label
-    border-bottom-color: #DDD
+.participants-list
+    box-shadow: -1px 2px 1px #26A69A
 
 .subject-participants .sub-user:hover
     background-color: #CCCCCC
