--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1563,6 +1563,7 @@ div.dataTables_wrapper div.dataTables_paginate {
     right: -315px;
     overflow-y: auto;
     opacity: 0;
+    z-index: -1;
 }
 
 #participants {
