--- a/subjects/templates/subjects/view.html
+++ b/subjects/templates/subjects/view.html
@@ -195,7 +195,8 @@
 
                     list.animate({
                         right : '-315px',
-                        opacity: 0
+                        opacity: 0,
+                        'z-index': '-1'
                     }, 500);
 
                     $this.removeClass('open');
@@ -206,7 +207,8 @@
 
                     list.animate({
                         right : 0,
-                        opacity: 1
+                        opacity: 1,
+                        'z-index': '1'
                     }, 500);
                 }
             });
