--- a/students_group/templates/groups/_form.html
+++ b/students_group/templates/groups/_form.html
@@ -9,7 +9,7 @@
         			<div class="panel-heading">
             			<div class="row">
                 			<div class="col-md-12">
-                    			<a data-parent="#professors_accordion" data-toggle="collapse" href="#participants">
+                    			<a data-parent="#professors_accordion" data-toggle="collapse" href="#group_participants">
                     				<h4 class="panel-title">
                             			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label for="{{ field.auto_id }}">{{ field.label }}</label>
                     				</h4>
@@ -17,7 +17,7 @@
                     		</div>
                     	</div>
                     </div>
-                    <div id="participants" class="panel-collapse collapse">
+                    <div id="group_participants" class="panel-collapse collapse">
                     	<p><em>{% trans 'Attribute students to group' %}:</em></p>
                     	{% render_field field class='form-control' %}
                     </div>
