--- a/chat/templates/chat/list_participants.html
+++ b/chat/templates/chat/list_participants.html
@@ -6,7 +6,7 @@
 {% block breadcrumbs %}
     {{ block.super }}
     
-    {% trans 'Messages General' as general %}
+    {% trans 'Messages' as general %}
     {% trans 'Participants' as participants_bread %}
 
     {% breadcrumb general 'chat:manage_general' %}
@@ -14,15 +14,7 @@
 {% endblock %}
 
 {% block content %}
-	<div id="core-subjects-options-div">
-        <ul class="core-subjects-options mural-tabs">
-            <a href="{% url 'chat:manage_general' %}"><li data-chat="general" class="active">{% trans "General" %} (<span>{{ totals.general }}</span>)</li></a>
-            <a href="{% url 'chat:manage_category' %}"><li data-chat="categories">{% trans "Per Category" %} (<span>{{ totals.category }}</span>)</li></a>
-            <a href=""><li data-chat="subjects">{% trans "Per Subject" %} (<span>{{ totals.subject }}</span>)</li></a>
-        </ul>
-    </div>
-
-    <div class="col-md-12 cards-content">
+	<div class="col-md-12 cards-content">
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
         		<div class="panel panel-default">
