--- a/webconference/templates/webconference/_form.html
+++ b/webconference/templates/webconference/_form.html
@@ -280,7 +280,7 @@
 					{% endif %}
             	</div>
 
-            	<p><em>{% trans 'Attribute students to YouTube Video' %}:</em></p>
+            	<p><em>{% trans 'Attribute students to Web Conference' %}:</em></p>
             	{% render_field form.students class='form-control' %}
 
             	<span id="helpBlock" class="help-block">{{ form.students.help_text }}</span>
@@ -300,7 +300,7 @@
 
             	<br clear="all" />
 
-            	<p><em>{% trans 'Attribute groups to YouTube Video' %}:</em></p>
+            	<p><em>{% trans 'Attribute groups to Web Conference' %}:</em></p>
             	{% render_field form.groups class='form-control' %}
 
             	<span id="helpBlock" class="help-block">{{ form.groups.help_text }}</span>
