--- a/chat/templates/chat/talk.html
+++ b/chat/templates/chat/talk.html
@@ -11,7 +11,7 @@
 					<img src="{{ participant.image_url }}" />
 				</span>
 				<h4 class="pull-left" data-breadcrumb="{% trans 'Talk with ' %}{{ participant }}">
-					<a class="status {{ status }}" title="{{ status|status_text }}"></a> 
+					<a class="user_{{ participant.id }}_status status {{ status }}" title="{{ status|status_text }}"></a> 
 					<b>{{ participant }}</b>
 				</h4>
 			</div>
