--- a/chat/templates/chat/_profile.html
+++ b/chat/templates/chat/_profile.html
@@ -14,7 +14,7 @@
 						<img src="{{ participant.image_url }}" />
 					</span>
 					<h4>
-						<a class="status {{ status }}" title="{{ status|status_text }}"></a> 
+						<a class="user_{{ participant.id }}_status status {{ status }}" title="{{ status|status_text }}"></a> 
 						<b>{{ participant }}</b>
 					</h4>
 					<a href="#" onclick="getModalInfo($(this), '{{ space }}', '{{ space_type }}'); return false;" data-url='{% url "chat:talk" participant.email %}' class="btn btn-raised btn-success btn-block">{% trans 'Send Message' %}</a>
