Disabling summernote drag and drop

--- a/mural/templates/mural/_form.html
+++ b/mural/templates/mural/_form.html
@@ -108,6 +108,7 @@
 	$(function () {
 		$('.text_simple_wysiwyg').summernote({
 			dialogsInBody: true,
+			disableDragAndDrop: true,
 			height: 150,
 		  	toolbar: [
 			    // [groupName, [list of button]]
