--- a/mural/templates/mural/_form_comment.html
+++ b/mural/templates/mural/_form_comment.html
@@ -135,6 +135,7 @@
 
 		$('.text_simple_wysiwyg').summernote({
 			dialogsInBody: true,
+			disableDragAndDrop: true,
 			height: 150,
 		  	toolbar: [
 			    // [groupName, [list of button]]
