--- a/chat/templates/chat/_form.html
+++ b/chat/templates/chat/_form.html
@@ -66,6 +66,7 @@
 	$(function () {
 		$('.text_simple_wysiwyg').summernote({
 			dialogsInBody: true,
+			disableDragAndDrop: true,
 			height: 150,
 		  	toolbar: [
 			    // [groupName, [list of button]]
