--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1568,6 +1568,7 @@ div.dataTables_wrapper div.dataTables_paginate {
     overflow-y: auto;
     opacity: 0;
     visibility: hidden;
+    display: none;
 }
 
 #participants {
