--- a/mural/templates/mural/list.html
+++ b/mural/templates/mural/list.html
@@ -37,7 +37,7 @@
                         </label>
                     </div>
                     <button type="submit" class="btn btn-success btn-raised">{% trans 'Filter' %}</button>
-                    <button type="button" id="clear_filter" class="btn btn-default btn-raised clear_filter">{% trans 'Clean Filters' %}</button>
+                    <button type="button" class="btn btn-default btn-raised clear_filter">{% trans 'Clean Filters' %}</button>
                 </form>
             </div>
         </div>
@@ -85,7 +85,7 @@
                     </label>
                 </div>
                 <button type="submit" class="btn btn-success btn-raised btn-block">{% trans 'Filter' %}</button>
-                <button type="button" id="clear_filter" class="btn btn-default btn-raised btn-block clear_filter">{% trans 'Clean Filters' %}</button>
+                <button type="button" class="btn btn-default btn-raised btn-block clear_filter">{% trans 'Clean Filters' %}</button>
             </form>
     	</div>
     </div>
