--- a/chat/templates/chat/_profile.html
+++ b/chat/templates/chat/_profile.html
@@ -17,7 +17,7 @@
 						<a class="user_{{ participant.id }}_status status {{ status }}" title="{{ status|status_text }}"></a> 
 						<b>{{ participant }}</b>
 					</h4>
-					<a href="#" onclick="getModalInfo($(this), '{{ space }}', '{{ space_type }}'); return false;" data-url='{% url "chat:talk" participant.email %}' class="btn btn-raised btn-success btn-block">{% trans 'Send Message' %}</a>
+					<a href="#" onclick="getModalInfo($(this), '{{ space }}', '{{ space_type }}'); return false;" data-url='{% url "chat:talk" participant.email %}' class="btn btn-raised btn-success btn-block" style="padding: 8px 15px">{% trans 'Send Message' %}</a>
 				</div>
 				<div class="col-md-8">
 					<div class="form-group">
